tests/rosetta/out/C/bitmap-write-a-ppm-file.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
typedef struct Colour Colour;
typedef struct Bitmap Bitmap;

typedef struct Colour {
  int R;
  int G;
  int B;
} Colour;
typedef struct {
  int len;
  colour_t *data;
} colour_list_t;
colour_list_t create_colour_list(int len) {
  colour_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(colour_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Bitmap {
  int width;
  int height;
  list_int pixels;
} Bitmap;
typedef struct {
  int len;
  bitmap_t *data;
} bitmap_list_t;
bitmap_list_t create_bitmap_list(int len) {
  bitmap_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(bitmap_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

bitmap_t newBitmap(int w, int h, Colour *c) {
  list_int tmp1 = list_int_create(0);
  int rows = tmp1;
  int y = 0;
  while (y < h) {
    list_int tmp2 = list_int_create(0);
    colour_list_t row = tmp2;
    int x = 0;
    while (x < w) {
      row = 0;
      x = x + 1;
    }
    rows = 0;
    y = y + 1;
  }
  return (Bitmap){.width = w, .height = h, .pixels = rows};
}

int setPixel(Bitmap *b, int x, int y, Colour *c) {
  int rows = b->pixels;
  colour_list_t row = rows.data[y];
  row.data[x] = c;
  rows.data[y] = row;
  b->pixels = rows;
}

int fillRect(Bitmap *b, int x, int y, int w, int h, Colour *c) {
  int yy = y;
  while (yy < y + h) {
    int xx = x;
    while (xx < x + w) {
      setPixel(&b, xx, yy, &c);
      xx = xx + 1;
    }
    yy = yy + 1;
  }
}

const char *pad(int n, int width) {
  char *tmp3 = _str(n);
  const char *s = tmp3;
  while (strlen(s) < width) {
    char *tmp4 = concat_string(" ", s);
    s = tmp4;
  }
  return s;
}

const char *writePPMP3(Bitmap *b) {
  int maxv = 0;
  int y = 0;
  while (y < b->height) {
    int x = 0;
    while (x < b->width) {
      colour_t p = b->pixels.data[y].data[x];
      if (p.r > maxv) {
        maxv = p.r;
      }
      if (p.g > maxv) {
        maxv = p.g;
      }
      if (p.b > maxv) {
        maxv = p.b;
      }
      x = x + 1;
    }
    y = y + 1;
  }
  char *tmp5 = _str(b->width);
  char *tmp6 = concat_string("P3\n# generated from Bitmap.writeppmp3\n", tmp5);
  char *tmp7 = concat_string(tmp6, " ");
  char *tmp8 = _str(b->height);
  char *tmp9 = concat_string(tmp7, tmp8);
  char *tmp10 = concat_string(tmp9, "\n");
  char *tmp11 = _str(maxv);
  char *tmp12 = concat_string(tmp10, tmp11);
  char *tmp13 = concat_string(tmp12, "\n");
  const char *out = tmp13;
  char *tmp14 = _str(maxv);
  int numsize = strlen(tmp14);
  y = b->height - 1;
  while (y >= 0) {
    const char *line = "";
    int x = 0;
    while (x < b->width) {
      colour_t p = b->pixels.data[y].data[x];
      char *tmp15 = concat_string(line, "   ");
      line = tmp15 + pad(p.r, numsize) + " " + pad(p.g, numsize) + " " +
             pad(p.b, numsize);
      x = x + 1;
    }
    char *tmp16 = concat_string(out, line);
    out = tmp16;
    if (y > 0) {
      char *tmp17 = concat_string(out, "\n");
      out = tmp17;
    } else {
      char *tmp18 = concat_string(out, "\n");
      out = tmp18;
    }
    y = y - 1;
  }
  return out;
}

int main() {
  colour_t black = (Colour){.r = 0, .g = 0, .b = 0};
  colour_t white = (Colour){.r = 255, .g = 255, .b = 255};
  bitmap_t bm = newBitmap(4, 4, &black);
  fillRect(&bm, 1, 0, 1, 2, &white);
  setPixel(&bm, 3, 3, &(Colour){.r = 127, .g = 0, .b = 63});
  const char *ppm = writePPMP3(&bm);
  printf("%s\n", ppm);
}

int main() {
  main();
  return 0;
}
